feat: customize new features

--- a/label_studio/frontend/src/pages/Organization/PeoplePage/PeopleList.styl
+++ b/label_studio/frontend/src/pages/Organization/PeoplePage/PeopleList.styl
@@ -25,7 +25,6 @@
 
   &__column,
   &__field
-    z-index 2
     height 48px
     padding 0 10px
     border none
@@ -78,6 +77,7 @@
         position absolute
 
       &::after
+        display none
         z-index 1
         background-color #fff
         width calc(100% + 22px)
